# ROTAS-ROS2

./: .gitignore  README.md  ros2_publisher.cpp
install/: setup.bat  setup.ps1
install/share/ROTAS_pkg/: local_setup.bat  package.bat  package.dsv  package.ps1
install/share/ROTAS_pkg/cmake/: ROTAS_pkgConfig.cmake
src/ROTAS_pkg/: CMakeLists.txt  package.xml
src/ROTAS_pkg/src/: ros2_relay.cpp  ros2_relay_linux.cpp  ros2_talker.cpp
